--- a/jeos/SettingUpVirtualLab.textile
+++ b/jeos/SettingUpVirtualLab.textile
@@ -116,11 +116,11 @@ h4. Setup New Template
 
 * In the web ui @http://tb/ovmtb@ you can select the ''New Template Project'' button on the top right.  
 
-* We can name this template after the size of the system disk we will allocate to it and the OS it will be running.  Lets choose: @sys12gb_swp1gb_oel5u5@, meaning we'll assign a 12GB system disk and install OEL(Oracle Enterprise Linux) 5 update 5 into it.
+* We can name this template after the size of the system disk we will allocate to it and the OS it will be running.  Lets choose: @sys6gb_swp1gb_oel5u5@, meaning we'll assign a 6144MB system disk and install OEL(Oracle Enterprise Linux) 5 update 5 into it.
 
 * Choose @EL55_i386_PVM_jeos@, as the JeOS Image, and hit next.  PVM(Para-Virtualized Machine) is _WAY_ faster than a HVM(Hosted Virtual Machine).  This is fine for OEL(Oracle Enterprise Linux), but if we want a Windows VM, we are stuck using HVM.  (Note: there are PVM drivers for windows which we can install to minimize the slowness of HVM)
 
-* We simply don't care about VCPUs and Memory as these are trivial to change after the fact.  System disk size and Swap space, however are harder to change.  The general rule of thumb for swap space is that it should be twice the RAM.  For our purposes, I want this template to have a SLIM memory footprint, so 512 RAM should be okay, and we'll set the swap to be 1024.  We can set the System disk size to be 12GB, which is: 12288MB.  Hit next.
+* We simply don't care about VCPUs and Memory as these are trivial to change after the fact.  System disk size and Swap space, however are harder to change.  The general rule of thumb for swap space is that it should be twice the RAM.  For our purposes, I want this template to have a SLIM memory footprint, so 512 RAM should be okay, and we'll set the swap to be 1024.  We can set the System disk size to be 6GB, which is: 6144MB.  Hit next.
 
 * Use the OEL 5U3 repo. Next.  Add the @wget@ package. Next. Skip Additional Packages. Next. Click @Save and Build@.  It will take some time (maybe ~5-10 minutes) so relax and have a beer! :)
 
@@ -151,7 +151,7 @@ Cleanup the vm.cfg file, in a "similar way to the TBT above":#tbt.
 I'm gonna use this template for Oracle Virtual Machine Manager, and Oracle Virtual Machine Template Builder...so I rename the folder to reflect that.
 
 bc. 
-mv sys12gb_swp1gb_oel5u5/ ovmm_ovmtb/
+mv sys6gb_swp1gb_oel5u5/ ovmm_ovmtb/
 
 Here is a look at my new vm.cfg file:
 
@@ -302,7 +302,9 @@ Now just tar and zip it up with:
 bc. cd /OVS/running_pool
 tar cvfz ovmm_ovmtb.tgz ovmm_ovmtb
 
-Now since we chose to have a 12GB system drive this may take a while, in the future, I think I'll set this to be around 2GB and soft link the @/opt/ovmtb/tarballs@ folder directly to the NFS mount.  I'm impatient!  The result was a 183MB file...quite small and shareable!  Cool!  Thats an entire, modern OS in 183MB!  Fire the image back up, give it a minute to startup and ssh back into it.
+The result was a 183MB file...quite small and shareable!  Cool!  Thats
+an entire, modern OS in 183MB!  Fire the image back up, give it a
+minute to startup and ssh back into it.
 
 h2. Install Template Builder
 
@@ -357,7 +359,26 @@ There are two folders that use a lot of space:
 * @/opt/ovmtb/builds/@
 * @/opt/ovmtb/tarballs/@
 
-Recommend repointing these to the NFS drive so we can keep the OVMTB disk as small as possible. (2GB seems about the limit of small).  This makes backing up much quicker.
+Recommend repointing these to the NFS drive so we can keep the OVMTB
+disk as small as possible. (2GB seems about the limit of small).  This
+makes backing up much quicker.
+
+Since we don't have a lot of extra disk space to store the templates
+we'll create on this image, soft link the @/opt/ovmtb/tarballs@ folder
+directly to the NFS mount.  That way the templates will be written to
+the large NFS mount and we don't have to create a large VM just to run
+template builder.  Large VM's are a pain to back up and ship around.
+
+bc. 
+[root@alm ovmtb]# mv tarballs/ /mnt/vmsrv/
+[root@alm ovmtb]# mv builds/ /mnt/vmsrv/
+
+NOTE: the above command will throw some permission errors...they can
+be safely ignored.
+
+[root@alm ovmtb]# ln -s /mnt/vmsrv/tarballs tarballs
+[root@alm ovmtb]# ln -s /mnt/vmsrv/builds builds
+
 
 h2. OVM Manager
 
