--- a/training/clojure.textile
+++ b/training/clojure.textile
@@ -210,6 +210,34 @@ bc. C-c C-k
 | C-c C-k            | Compile the current buffer               |
 | C-x C-e            | Evaluate the expression under the cursor |
 
+h2. Installation Method 2
+
+source: "http://www.assembla.com/wiki/show/clojure/Getting_Started_with_Emacs":http://www.assembla.com/wiki/show/clojure/Getting_Started_with_Emacs
+
+* Use the .emacs starter kit
+
+bc. 
+~$ cd ~
+~$ git clone https://github.com/technomancy/emacs-starter-kit.git
+~$ mv ~/.emacs.d ~/.emacs.d.orig
+~$ mv ~/emacs-starter-kit ~/.emacs.d
+
+Get the latest package.el file
+
+bc. 
+~$ cd ~/tmp
+~/tmp$ git clone https://github.com/technomancy/package.el.git
+~/tmp$ cp package.el/package.el ~/projects/elisp/
+
+* update ~/.emacs with:
+
+bc. 
+(require 'package)
+
+
+
+
+
 h1. Using Clojure 
 
 "Source of the following info":http://java.ociweb.com/mark/clojure/article.html
